# openGauss-connector-odbc

./: CMakeLists.txt  Copyright Notice.docx  LICENSE  Makefile  Makefile.in  README.en.md  README.md  Third_Party_Open_Source_Software_Notice  aclocal.m4  bind.c  build.sh  config.h.in  configure  connection.c  connection.h  convert.c  convert.h  descriptor.c  descriptor.h  dlg_specific.c  dlg_specific.h  dlg_wingui.c  drvconn.c  execute.c  info.c  inouealc.c  loadlib.h  misc.c  misc.h  msdtc_enlist.cpp  multibyte.h  mylog.c  mylog.h  odbcapi30.c  odbcapi30w.c  odbcapiw.c  options.c  parse.c  pgapi30.c  pgapifunc.h  (+18 more)
installer/: .gitignore  make.bat  psqlodbc.wxs  psqlodbc_cpu.wxs  psqlodbcm.wxs  psqlodbcm_cpu.wxs
odbc-test-gauss/: .gitignore  Interface_setup.sql  Makefile  arraybinding-test.c  boolsaschar-test.c  common.c  cvtnulldate-test.c  dataatexecution-test.c  init.sh  insertreturning-test.c  odbc_DTS2019070108437.c  odbc_DTS2019071815351.c  odbc_SQLAllocConnect.c  odbc_SQLAllocEnv.c  odbc_SQLCancel.c  odbc_SQLDescribeParam.c  odbc_SQLExtendedFetch.c  odbc_SQLGetConnectAttr.c  odbc_SQLGetConnectOption.c  odbc_SQLGetDescField.c  odbc_SQLGetDiagField.c  odbc_SQLGetEnvAttr.c  odbc_SQLGetFunction.c  odbc_SQLGetInfo.c  odbc_SQLGetStmtAttr.c  odbc_SQLNumParams.c  odbc_SQLSetDescField.c  odbc_SQLStatistics.c  odbc_SQLTables.c  odbc_batch_insert.c  odbc_capital_01.c  odbc_capital_02.c  odbc_capital_03.c  odbc_capital_04.c  odbc_capital_05.c  odbc_capital_06.c  odbc_capital_07.c  odbc_null_adapt_01.c  odbc_null_adapt_02.c  odbc_null_adapt_03.c  (+43 more)
test/: Makefile.in  odbcini-gen.sh
test/expected/: positioned-update.out
test/src/: catalogfunctions-test.c  cursor-block-delete-test.c  lfconversion-test.c  wchar-char-test-utf8.c  wchar-char-test.c
windows/: odbc-win32编译指导.md  odbc-测试.md
